--- a/res/layout/list_item_view.xml
+++ b/res/layout/list_item_view.xml
@@ -3,7 +3,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@android:id/text1"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:clickable="true">
+          android:layout_height="@dimen/list_item_height"
+          android:text="@string/search_contacts"
+          android:background="@color/white"
+          android:textColor="@color/black"
+          android:textSize="@dimen/font_size"
+          android:padding="@dimen/list_item_padding"
+          android:clickable="false">
 
 </TextView>
