--- a/res/layout/list_view.xml
+++ b/res/layout/list_view.xml
@@ -3,6 +3,10 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@android:id/list"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="match_parent"
+          android:background="@color/white"
+          android:divider="@color/dark_gray"
+          android:dividerHeight="@dimen/divider_height"
+          android:clickable="true">
 
 </ListView>
