--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/main_layout"
               android:orientation="vertical"
+              android:background="@color/white"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-        >
+              android:paddingLeft="@dimen/default_padding"
+              android:paddingRight="@dimen/default_padding">
 </LinearLayout>
 
