--- a/res/layout/list_item_view.xml
+++ b/res/layout/list_item_view.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@android:id/text1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+          android:id="@+id/contact_row"
           android:layout_width="match_parent"
-          android:layout_height="@dimen/list_item_height"
+          android:layout_height="50sp"
           android:text="@string/search_contacts"
           android:background="@color/white"
           android:textColor="@color/black"
-          android:textSize="@dimen/font_size"
-          android:padding="@dimen/list_item_padding"
+          android:textSize="16sp"
+          android:padding="12sp"
           android:clickable="false">
-
-</TextView>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/contact_name"
+              android:layout_width="0sp"
+              android:layout_height="match_parent"
+              android:layout_weight="3"
+              android:text=""
+              android:background="@color/white"
+              android:textColor="@color/black"
+              android:clickable="false">
+    </TextView>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/contact_type"
+              android:layout_width="0sp"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:text=""
+              android:background="@color/white"
+              android:textColor="@color/black"
+              android:clickable="false">
+    </TextView>
+</LinearLayout>
