--- a/res/layout/list_view.xml
+++ b/res/layout/list_view.xml
@@ -6,7 +6,9 @@
           android:layout_height="match_parent"
           android:background="@color/white"
           android:divider="@color/dark_gray"
-          android:dividerHeight="@dimen/divider_height"
+          android:dividerHeight="1sp"
+          android:fastScrollEnabled="true"
+          android:fastScrollAlwaysVisible="true"
           android:clickable="true">
 
 </ListView>
