--- a/res/layout/list_item_view.xml
+++ b/res/layout/list_item_view.xml
@@ -3,28 +3,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/contact_row"
           android:layout_width="match_parent"
-          android:layout_height="50sp"
+          android:layout_height="50dp"
           android:text="@string/search_contacts"
           android:background="@color/white"
           android:textColor="@color/black"
-          android:textSize="16sp"
-          android:padding="12sp"
+          android:paddingLeft="15dp"
           android:clickable="false">
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/contact_name"
-              android:layout_width="0sp"
+              android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="3"
+              android:gravity="center_vertical"
               android:text=""
+              android:textSize="16sp"
               android:background="@color/white"
               android:textColor="@color/black"
               android:clickable="false">
     </TextView>
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/contact_type"
-              android:layout_width="0sp"
+              android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
+              android:gravity="center_vertical"
               android:text=""
               android:background="@color/white"
               android:textColor="@color/black"
