--- a/res/layout/list_view.xml
+++ b/res/layout/list_view.xml
@@ -6,7 +6,7 @@
           android:layout_height="match_parent"
           android:background="@color/white"
           android:divider="@color/dark_gray"
-          android:dividerHeight="1sp"
+          android:dividerHeight="1dp"
           android:fastScrollEnabled="true"
           android:fastScrollAlwaysVisible="true"
           android:clickable="true">
