--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,8 +5,8 @@
               android:background="@color/white"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:paddingLeft="5sp"
-              android:paddingRight="5sp">
+              android:paddingLeft="5dp"
+              android:paddingRight="5dp">
     <TextView android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
