--- a/res/layout/details_view.xml
+++ b/res/layout/details_view.xml
@@ -5,18 +5,19 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/details_view"
-              android:textColor="@color/black">
+              android:textColor="@color/black"
+              android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_green_dark">
+        android:background="@android:color/white">
         <ImageView
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:id="@+id/photo_details"
             android:src="@drawable/ic_action_user"
-            android:background="@color/black"
+            android:background="@color/dark_gray"
             android:contentDescription="photo"
             android:layout_weight="1"
             android:scaleType="fitXY"
