--- a/res/menu/contact_details_actionbar.xml
+++ b/res/menu/contact_details_actionbar.xml
@@ -4,6 +4,7 @@
     <item android:id="@+id/ic_action_delete"
           android:icon="@drawable/ic_action_delete"
           android:title="@string/delete_contact"
+          android:onClick="onDeleteAction"
           android:showAsAction="collapseActionView|always"/>
 
 </menu>
