--- a/res/menu/contact_details_actionbar.xml
+++ b/res/menu/contact_details_actionbar.xml
@@ -6,5 +6,9 @@
           android:title="@string/delete_contact"
           android:onClick="onDeleteAction"
           android:showAsAction="collapseActionView|always"/>
-
+    <item android:id="@+id/ic_action_edit"
+          android:icon="@drawable/ic_action_edit"
+          android:title="@string/edit_contact"
+          android:onClick="onEditAction"
+          android:showAsAction="collapseActionView|always"/>
 </menu>
