--- a/res/layout/edit_contact_content.xml
+++ b/res/layout/edit_contact_content.xml
@@ -12,6 +12,7 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:id="@+id/edit_phone_number"
+            android:tag="edited_phone_number"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:text="phone_number"
